postgis (1.3.3-3) UNRELEASED; urgency=low

  * Added Vcs-* fields in debian/control.
  * Fixed download URL in debian/copyright.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 08 Jun 2008 11:22:38 +0200

postgis (1.3.3-2) unstable; urgency=high

  * Dropped postgresql 8.2 support due to removal in Lenny.
    (closes: #474287)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 06 Jun 2008 23:57:45 +0200

postgis (1.3.3-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Tue, 15 Apr 2008 09:01:58 +0200

postgis (1.3.2-2) unstable; urgency=low

  * Add support for postgresql-8.3. (Closes: #466417, #471689)

 -- Fabio Tranchitella <kobold@debian.org>  Wed, 19 Mar 2008 19:23:00 +0100

postgis (1.3.2-1) unstable; urgency=low

  [ Francesco Paolo Lovergine ]
  * Added Homepage field in debian/control
  * Fixed lintian warning: debian-rules-ignores-make-clean-error

  [ Fabio Tranchitella ]
  * New upstream release.
  * Updated Standard-Version to 3.7.3.

 -- Fabio Tranchitella <kobold@debian.org>  Mon, 31 Dec 2007 10:57:12 +0100

postgis (1.3.1-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Mon, 10 Sep 2007 10:36:30 +0200

postgis (1.2.1-2) unstable; urgency=low

  * Added build-dep from libjts-java 1.7
    (closes: #425919)
  * Added me among uploaders.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sat, 16 Jun 2007 01:00:49 +0200

postgis (1.2.1-1) unstable; urgency=low

  * New upstream release.
  * Migrate to PostgreSQL 8.2-only (Closes: #419297)
  * Remove busted templategis from the build (new in 1.2.1 anyway).
    (Currently attempts to install files in /etc/default, doesn't
     respect $DESTDIR and overall looks like a godawful mess)

 -- Stephen Frost <sfrost@debian.org>  Fri, 13 Apr 2007 09:19:18 +0200

postgis (1.1.6-2) unstable; urgency=low

  * debian/README.Debian: added documentation for the new users on how to use