@@ -2,10 +2,10 @@
 
 set -e
 
-if [ "$1" = "config" ]; then
+if [ "$1" = "configure" ]; then
 	if [ -f /usr/lib/postgis/@POSTGIS_VERSION@/postgres/@POSTGRES_VERSION@/lib/liblwgeom.so.@SOVERSION@ ]; then
-		ln /usr/lib/postgis/@POSTGIS_VERSION@/postgres/@POSTGRES_VERSION@/lib/liblwgeom.so.@SOVERSION@ \
-		   /usr/lib/postgresql/@POSTGRES_VERSION@/lib/liblwgeom.so.@SOVERSION@
+		ln -f /usr/lib/postgis/@POSTGIS_VERSION@/postgres/@POSTGRES_VERSION@/lib/liblwgeom.so.@SOVERSION@ \
+		      /usr/lib/postgresql/@POSTGRES_VERSION@/lib/liblwgeom.so.@SOVERSION@
 	fi
 fi
 
