@@ -2,8 +2,13 @@ postgis (1.3.3-3) UNRELEASED; urgency=low
 
   * Added Vcs-* fields in debian/control.
   * Fixed download URL in debian/copyright.
+  * Now it installs the shared lib in a private postgis path and makes a
+    hard link in the postgres library path at configure time. That would
+    allow coexistence of different flavors of the library which could be
+    used by different DBs at run-time.
+    (closes: #441794, #441797)
 
- -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 08 Jun 2008 11:22:38 +0200
+ -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 09 Jun 2008 13:03:04 +0200
 
 postgis (1.3.3-2) unstable; urgency=high
 
